--- a/style.css
+++ b/style.css
@@ -3,3 +3,60 @@
     margin: 0;
     padding: 0;
 }
+
+body{
+    width: 70%;
+    margin: auto;
+}
+
+.clearfix::after{
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.products{
+    position: relative;
+    float: left;
+}
+
+.product img{
+    width: 475px;
+}
+
+.tag div{
+    display: inline-block;
+    color: white;
+    font-weight: 600;
+    font-size: 1.25rem;
+    padding: 7px 8px;
+    margin-right: 2px;
+}
+
+.discount{
+    background-color: rgb(226, 0, 0);
+
+}
+
+.eco{
+    background-color: rgb(0, 146, 78);
+    
+}
+
+.tag{
+    position: absolute;
+    left: 0;
+    bottom: 25px;
+}
+
+.heart{
+    font-size: 2.5rem;
+    background-color: white;
+    padding: 10px 20px;
+    position: absolute;
+    top: 30px;
+    right: 0%;
+
+
+
+}
