--- a/style.css
+++ b/style.css
@@ -1,34 +1,41 @@
 *{
     box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
-body{
-    width: 70%;
-    margin: auto;
+    margin: 0%;
+    padding: 0%;
 }
 
 .clearfix::after{
     content: "";
-    display: table;
     clear: both;
+    display: table;
 }
 
-.products{
+body{
+    width: 1900px;
+    margin: auto;
+}
+
+img{
+    width: 608px;
+}
+
+.article .column-left{
+    width: 32%;
+    height: 866px;
     position: relative;
-    float: left;
+    margin-right: 15px;
+    margin-bottom: 100px;
 }
 
-.product img{
-    width: 475px;
+.article-column > div{
+    float: left;
 }
 
 .tag div{
     display: inline-block;
     color: white;
     font-weight: 600;
-    font-size: 1.25rem;
+    font-size: 1.65rem;
     padding: 7px 8px;
     margin-right: 2px;
 }
@@ -46,15 +53,20 @@ body{
 .tag{
     position: absolute;
     left: 0;
-    bottom: 100px;
+    bottom: 20px;
 }
 
-.heart{
-    font-size: 2.5rem;
+ul{
+    list-style: none;
+}
+
+#heart{
+    font-size: 4rem;
     background-color: white;
-    padding: 10px 20px;
+    padding: 5px 20px;
+    color: black;
     position: absolute;
-    top: 30px;
+    top: 35px;
     right: 0%;
 }
 
